# putnamian_ai_framework

./: .gitignore  README.md  demo.py  demo_neuroevolution.py  persona_library.json  plan.md  pyproject.toml  seg_demo.py  slap_demo.py  test_adaptive_personas.py
integration_proposals/: hierarchical_cdci_framework.py  unified_hcdci_demo.py
putnamian_ai/: __init__.py  core.py  enhanced_modifier.py  enhanced_network.py  networks.py  utils.py
putnamian_ai/hcdci/: ethical_constraints.py  modern_neuroevolution.py  seg_personas.py  semantic_logic_auto_progressor.py
