[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "putnamian-ai"
version = "0.1.0"
description = "Contradiction-Driven Neural Evolution (CDNE) - AI framework based on Peter Putnam's insights"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ty", email = "ty@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.8.0",
    "numpy>=2.3.2", 
    "networkx>=3.5",
    "scipy>=1.16.1",
    "matplotlib>=3.10.6",
    "pydantic>=2.11.7",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
